# football-prediction-platform

./: Dockerfile.jenkins  Jenkinsfile  README.md  docker-compose.yml  jenkinsfile.sh  jenskinsfile.sh
backend/: Dockerfile  app.py  main.py  pyproject.toml
backend/tests/: tests_api.py
