[tool.poetry]
name = "football-prediction-backend"
version = "0.1.0"
description = ""
authors = ["OA <laposki91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg2-binary = "^2.9.7" # PostgreSQL driver
redis = "^5.0.0"
sqlalchemy = "^2.0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
